# IC

./: .gitignore  README.md
cmake_template/: CMakeLists.txt
cmake_template/src/: CMakeLists.txt  main.cpp
cmake_template/src/edge/: CMakeLists.txt  edge.cpp  edge.hpp
workspace_ardunio_vsc/: CMakeLists.txt  TEST.cpp  avr-burn.sh  avr-cu.sh  avr-gcc.cmake  readme.md
workspace_ardunio_vsc/Blink/: Blink.cpp  CMakeLists.txt
workspace_ardunio_vsc/DigitalReadSerial/: CMakeLists.txt  DigitalReadSerial.cpp
workspace_ardunio_vsc/Fisher/: CMakeLists.txt  console.txt  fisher.cpp  readme.md
workspace_ardunio_vsc/IAnalogRead/: CMakeLists.txt  IAnalogRead.cpp
workspace_ardunio_vsc/IDCardReader/: IDCardReader.cpp
workspace_ardunio_vsc/IPWM/: CMakeLists.txt  IPWM.cpp
workspace_ardunio_vsc/IServo/: CMakeLists.txt  IServo.cpp
workspace_ardunio_vsc/ISim900a/: CMakeLists.txt  ISim900a.cpp
workspace_ardunio_vsc/ISim900a-2/: CMakeLists.txt  ISim900a-2.cpp
workspace_ardunio_vsc/IStepper/: CMakeLists.txt  IStepper.cpp
workspace_ardunio_vsc/NewRain-Smart-Car/: CMakeLists.txt  NewRainSmartCar.cpp  readme.md
workspace_ardunio_vsc/NewRain-Smart-Car/AFMotor/: AFMotor.cpp
workspace_ardunio_vsc/NewRain-Smart-Car/ultrasonic/: CMakeLists.txt
workspace_ardunio_vsc/Serail2/: CMakeLists.txt  Serail.cpp
workspace_ardunio_vsc/SmartCarParkFront-Lib/: CMakeLists.txt
workspace_ardunio_vsc/SmartCarParkFront-Lib-Mine/: CMakeLists.txt
workspace_ardunio_vsc/SmartCarParkFront-Lib-Mine/base/: CMakeLists.txt  util.cpp
workspace_ardunio_vsc/SmartCarParkFront-Lib-Mine/ethernet/: http.h
workspace_ardunio_vsc/SmartCarParkFront-Lib-Mine/gprs/: CMakeLists.txt  Sim900a.h
workspace_ardunio_vsc/SmartCarParkFront-Lib-Mine/http/: CMakeLists.txt  http.cpp  http.h
workspace_ardunio_vsc/SmartCarParkFront-Lib-Mine/sdcard/: CMakeLists.txt  SdCard.h
workspace_ardunio_vsc/SmartCarParkFront-Lib-Mine/serialcamera/: CMakeLists.txt
workspace_ardunio_vsc/SmartCarParkFront-Lib/arduino/: CMakeLists.txt
workspace_ardunio_vsc/SmartCarParkFront-Lib/ethernet/: CMakeLists.txt  Dns.h
workspace_ardunio_vsc/SmartCarParkFront-Lib/ethernet/utility/: w5100.h
workspace_ardunio_vsc/SmartCarParkFront-Lib/sd/: CMakeLists.txt
workspace_ardunio_vsc/SmartCarParkFront-Lib/sd/utility/: CMakeLists.txt
workspace_ardunio_vsc/SmartCarParkFront-Lib/sd_fs/: CMakeLists.txt
workspace_ardunio_vsc/SmartCarParkFront-Lib/servo/: CMakeLists.txt
workspace_ardunio_vsc/SmartCarParkFront-Lib/software_serial/: CMakeLists.txt
workspace_ardunio_vsc/SmartCarParkFront-Lib/spi/: CMakeLists.txt
workspace_ardunio_vsc/SmartCarParkFront-Lib/w5100/: CMakeLists.txt  socket.h
workspace_ardunio_vsc/arduino_app/Fisher/: CMakeLists.txt  avr-gcc.cmake  fisher.ino
workspace_ardunio_vsc/arduino_app/Fisher/blink/: CMakeLists.txt
workspace_ardunio_vsc/arduino_app/NewRain-Smart-Car/: CMakeLists.txt  NewRainSmartCar.cpp
workspace_ardunio_vsc/arduino_app/NewRain-Smart-Car/AFMotor/: CMakeLists.txt
workspace_ardunio_vsc/arduino_app/NewRain-Smart-Car/stepcounter/: CMakeLists.txt  stepcounter.h
workspace_ardunio_vsc/arduino_app/SmartCarkParkFront/: SCP.cpp
workspace_ardunio_vsc/arduino_lib/: CMakeLists.txt  arduino_lib.c  readme.md
workspace_ardunio_vsc/arduino_lib/.history/libavr-mine/: readme_20210124203109.md
workspace_ardunio_vsc/arduino_lib/include/avr/: eeprom.h
workspace_ardunio_vsc/arduino_lib/libavr-base/: CMakeLists.txt  lib.c
workspace_ardunio_vsc/arduino_lib/libavr-base/arduino/: Arduino.h  CMakeLists.txt  USBAPI.h
workspace_ardunio_vsc/arduino_lib/libavr-base/ethernet/: CMakeLists.txt  EthernetClient.h
workspace_ardunio_vsc/arduino_lib/libavr-base/software_serial/: CMakeLists.txt
workspace_ardunio_vsc/arduino_lib/libavr-base/spi/: CMakeLists.txt  SPI.cpp
workspace_ardunio_vsc/arduino_lib/libavr-mine/: CMakeLists.txt
workspace_ardunio_vsc/arduino_lib/libavr-mine/gprs/: Sim900a.h  Sim900aHTTP.cpp
workspace_ardunio_vsc/arduino_lib/libavr-mine/sdcard/: CMakeLists.txt
workspace_ardunio_vsc/cmake-avr/: .gitignore  CMakeLists.txt  README.md  avr-gcc.cmake  main.c
workspace_ardunio_vsc/cmake-avr/blink/: CMakeLists.txt  blink_lib.cpp  blink_lib.h
workspace_ardunio_vsc/include/variants/mega/: pins_arduino.h
workspace_ardunio_vsc/include/variants/micro/: pins_arduino.h
workspace_ardunio_vsc/libavr-base/arduino/: CMakeLists.txt
workspace_ardunio_vsc/libavr-base/sd/: CMakeLists.txt
workspace_ardunio_vsc/libavr-base/servo/: CMakeLists.txt
workspace_ardunio_vsc/libavr-mine/base/: CMakeLists.txt
workspace_ardunio_vsc/libavr-mine/gprs/: CMakeLists.txt
workspace_ardunio_vsc/libavr-mine/http/: CMakeLists.txt
workspace_ardunio_vsc/libavr-mine/serialcamera/: CMakeLists.txt
workspace_gn/gnproject/sharedapi/: BUILD.gn  CMakeLists.txt  sharedlib.cpp  sharedlib.h
workspace_vsc/C-C++/: CMakeLists.txt  readme.md
workspace_vsc/C-C++/CIvokeC++/src/: proxy_module.cpp  proxy_module.h
workspace_vsc/C-C++/ModuleCShared/: .cproject
workspace_vsc/C-C++/c_i_cpp/: CMakeLists.txt
workspace_vsc/C-C++/c_i_cpp/src/: c_ivoke_cpp.c  proxy_module.cpp  proxy_module.h
workspace_vsc/C-C++/cpp_i_c/: CMakeLists.txt
workspace_vsc/C-C++/cpp_i_c/src/: cpp_ivoke_c.cpp
workspace_vsc/C-C++/lib_c_shard/: CMakeLists.txt
workspace_vsc/C-C++/lib_cpp_shard/: CMakeLists.txt
workspace_vsc/ILearcnC++/: CMakeLists.txt
workspace_vsc/ILearcnC++/src/: ILearn.cpp
workspace_vsc/ILearnC/: CMakeLists.txt
workspace_vsc/ILearnC/src/: ILearn.c
workspace_vsc/STM32-First/: CMakeLists.txt
workspace_vsc/STM32-First/src/: main.cpp
workspace_vsc/inotify/: .gitignore  CMakeLists.txt  readme.md
workspace_vsc/inotify/c_notify/: CMakeLists.txt  main.c  notify.c
workspace_vsc/inotify/cpp_notify/: CMakeLists.txt  main.cpp
workspace_vsc/linux_c/src/: CMakeLists.txt  main.c
workspace_vsc/linux_c/tst/: CMakeLists.txt  main.c
workspace_vsc/pthread/: CMakeLists.txt
workspace_vsc/pthread/src/: CMakeLists.txt  complex.c
workspace_vsc/python_c/: CMakeLists.txt  readme.md
workspace_vsc/python_c/python_c/: CMakeLists.txt
(+1025 files in other folders)
