cmake_minimum_required(VERSION 3.0.0)
project(ILC VERSION 0.1.0)
set( CMAKE_VERBOSE_MAKEFILE on )
add_executable(${PROJECT_NAME} src/ILearn.c ${DIR_ROOT_SRCS})

set(subs "array;callback;integer;method;string;struct")
foreach(sub IN LISTS subs)
    message("config subdirectory::: ${sub}")
    add_subdirectory("src/${sub}")
    link_directories(${PROJECT_BINARY_DIR}/src/${sub})
    target_link_libraries(${PROJECT_NAME} ${sub})
endforeach (sub) 